Verif/Test/Invalide/test_erreur_3.80-17.deca
// Description:
//    Programme soulevant l'erreur (3.80)
// Resultats:
//    Erreur contextuelle
//    Ligne 14 : Les types 'String' et 'int' sont incompatibles avec l'opérateur binaire '>=' (règle 3.80)
//
// Attributs: exec correct automatique
//
// Historique:
//    cree le 14/01/2012

boolean var;
{
   var = "a" >= 1;
}